# test-ambient

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Copy of Feature Refinement-JIRA#-FeatureTitle .md  MPIJob-RFE-Reviews.md  MPIJob-RFE.md  MPIJobRFEPrompt.md  MPIJobRequirementClarification.md  MPIJobsFeatureRefinement.md  README.md  RFE-SUMMARY.md  RFE_AGENT_REVIEW_SUMMARY.md  UX_ARCHITECTURE_MPIJOBS.md  [Final] RFE submission template.md  mpijobs-executive-summary.md  mpijobs-product-analysis.md  perses-executive-summary.md  perses-integration-product-analysis.md  perses-integration-ux-design.md  perses-rfe-sections.md  rfe.md  test-file.txt  testing-quick-reference.md  testing-research-summary.md  testing-strategy-mpijob.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yaml  ci.yaml
001-support-for-mpijob/: IMPLEMENTATION_PROGRESS.md  acceptance-criteria.md  beta-program-plan.md  clarification-responses.md  implementation-plan.md  implementation-tasks.md  kickoff-presentation.md  plan.md  progress-summary.md  project-timeline.md  requirements-traceability.md  spec.md  summary.md  tasks.md
api/training/: mpijob.go
cli/: Dockerfile  README.md  go.mod  main.go
cli/cmd/: root.go
docs/user-guide/: getting-started.md
frontend/: README.md  package.json
frontend/src/: App.tsx  index.css  index.tsx
kubernetes/crds/: mpijob_crd.yaml  mpijob_validation.yaml
kubernetes/network/: mpijob_network_policies.yaml
kubernetes/operator/: README.md  deployment.yaml  kustomization.yaml  role.yaml  (+2 more)
sdk/: README.md  pyproject.toml
sdk/examples/: create_mpijob.py
sdk/odh/: __init__.py
sdk/odh/training/: __init__.py  client.py  models.py  mpijob.py  resources.py
(+58 files in other folders)
